<resources>

    <string name="app_name">CATS</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">CATS</string>
    <string name="title_activity_select_group">SelectGroupActivity</string>
    <string name="title_activity_show_posts">ShowPostsActivity</string>
    <string name="title_activity_new_post">CATS</string>
    <string name="title_activity_create_group">CreateGroupActivity</string>
    <string name="create_group_group_name">  Enter New Group Name:</string>
    <string name="create_group_password">  Enter New Password:</string>
    <string name="create_group_add_password">  Enter Number To Add Member</string>
    <string name="create_group_add_button">Add</string>
    <string name="create_group_create_button">Create Group</string>

</resources>